--- a/server/package.json
+++ b/server/package.json
@@ -11,11 +11,15 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.18.0",
+    "bcryptjs": "^2.4.3",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.6"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@types/express": "^4.17.8",
+    "@types/jsonwebtoken": "^8.5.0",
     "@types/mongoose": "^5.7.36",
     "@types/node": "^14.11.2",
     "dotenv": "^8.2.0",
