--- a/client/package.json
+++ b/client/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "@apollo/client": "^3.2.1",
     "graphql": "^15.3.0",
-    "next": "9.5.3",
+    "next": "9.5.4-canary.23",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   },
